# EduChain

./: .gitignore  Engineering Implementation Plan.md  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: constants.py  crypto.py  error_handlers.py  exceptions.py  kms.py  logging_config.py  permissions.py  rate_limiter.py  redis.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: appeal.py  audit_log.py  badge.py  base.py  blacklist.py  consent.py  credential.py  endorsement.py  institution.py  project.py  qr_nonce.py  reputation.py  revocation.py  role.py  signing_key.py  user.py
backend/app/repositories/: appeal_repository.py  audit_log_repository.py  base_repository.py  credential_repository.py  endorsement_repository.py  institution_repository.py  qr_nonce_repository.py  reputation_repository.py  signing_key_repository.py  user_repository.py
backend/app/schemas/: admin.py  appeal.py  auth.py  common.py  community.py  credential.py  endorsement.py  github.py  institution.py  recruiter.py  student.py  verification.py
backend/app/services/: appeal_service.py  audit_service.py  auth_service.py  community_service.py  credential_service.py  email_service.py  endorsement_service.py  github_service.py  institution_service.py  key_management_service.py  (+5 more)
backend/scripts/: rls_policies.sql  seed.py
(+472 files in other folders)
